# sgc

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Deploy.md  Django README.md  Dockerfile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  requirements_dev.txt  restore.py
.github/workflows/: AutoPullRequest.yaml  auto_pull_request.yaml  auto_release.yaml
app/: metrics.py  middleware.py  pipeline.py  settings.py  tests.py  urls.py  views.py
app/management/commands/: restore_from_sqlite.py
app/templates/: base.html  home.html
app/templates/components/: _component_metrics.html  _component_supplier_formset.html  _component_top_metrics.html  _footer.html  _header.html  _low_stock_components.html  _pagination.html  _sidebar.html
app/templatetags/: querystring_tags.py
assemblies/: apps.py  forms.py  models.py  urls.py  views.py
assemblies/migrations/: 0001_initial.py  0002_remove_assembly_package.py
assemblies/templates/: assembly_create.html  assembly_delete.html  assembly_detail.html  assembly_list.html  assembly_update.html
brands/: forms.py  models.py  urls.py  views.py
brands/migrations/: 0001_initial.py
brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
categories/: forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/templates/: category_delete.html  category_detail.html  category_list.html  category_update.html
components/: admin.py  apps.py  forms.py  models.py  querystring_tags.py  tests.py  urls.py  views.py
components/migrations/: 0001_initial.py  0002_component_location.py  0003_component_datasheet.py  0004_component_equivalent.py  0005_component_image.py  0006_remove_component_cost_price_and_more.py  0007_alter_component_price.py  0008_add_non_negative_constraints.py  0008_component_assembly.py  0009_componentsupplier.py  0010_remove_componentsupplier_is_default.py
components/templates/: component_create.html  component_delete.html  component_detail.html  component_list.html  component_update.html
products/: models.py
products/migrations/: 0001_initial.py
sub_categories/: forms.py  models.py  urls.py  views.py
sub_categories/migrations/: 0001_initial.py  0002_subcategory_category.py  0003_alter_subcategory_category.py
sub_categories/templates/: sub_category_create.html  sub_category_delete.html  sub_category_detail.html  sub_category_list.html  sub_category_update.html
suppliers/: forms.py  models.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
suppliers/templates/: supplier_delete.html  supplier_detail.html  supplier_list.html  supplier_update.html
(+5 files in other folders)
