[tool.commitizen]
name = "cz_conventional_commits"  # Use Conventional Commits
version = "1.0.0"                 # Current version
tag_format = "v$version"         # Git tag format
update_changelog = true           # Auto-update changelog
changelog_file = "CHANGELOG.md"   # Path to the changelog file
version_files = [
    "app/__version__.py",
]

[tool.black]
line-length = 88                  # Maximum line length for formatting
target-version = ["py312"]        # Target Python version

[tool.flake8]
max-line-length = 88              # Match Black's line length
ignore = [
    "E203",                       # Ignore specific errors (e.g., whitespace before ':')
    "E501",
    "W503"                        # Ignore line break before binary operator
]
exclude = ["venv", "__pycache__", ".git"]  # Directories to exclude from linting

[build-system]
requires = ["setuptools", "wheel"]        # Build system dependencies
build-backend = "setuptools.build_meta"   # Build backend

[tool.pytest.ini_options]
testpaths = ["tests"]                     # Path to your test directory
addopts = "--strict-markers -v"           # Additional pytest options

[tool.isort]
profile = "black"                         # Align isort configuration with Black
line_length = 88                          # Match Black's line length
known_first_party = ["app"]
default_section = "THIRDPARTY"
skip = ["venv"]                           # Exclude virtual environments
