[project]
name = "sgc"
version = "1.0.0"
description = "Sistema de Gestão de Componentes"
requires-python = ">=3.12"
dependencies = [
    "Django==5.1",
    "pillow>=10.4.0",
    "python-decouple>=3.8",
    "social-auth-app-django>=5.4.2",
    "social-auth-core>=4.5.4",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.1.0",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "ruff>=0.9.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
update_changelog = true
changelog_file = "CHANGELOG.md"
version_files = [
    "app/__version__.py",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "--strict-markers -v"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", "venv_test", ".venv", "__pycache__", ".git", "*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["app", "brands", "categories", "components", "packages", "sub_categories", "suppliers", "products"]
